# unidown

./: .browserslistrc  Cargo.toml  README.md  deny.toml  nuxt.config.ts  package.json
.github/workflows/: build.yml  test.yml
app/: app.vue
app/assets/css/: main.css
app/pages/: index.vue
js/: bundle.js  index.js  package.json  test.js
server/api/: extract.post.ts  fetch.post.ts  get.get.ts
server/utils/: bilibili.ts  extractors.ts
src/: lib.rs  main.rs
src/down/: alldown.rs  bilibili.rs  douyin.rs  mod.rs
src/downloader/: bilibili.rs  mod.rs  udown.rs
src/fmt/: size.rs
src/utils/: abort.rs  decode.rs  fd.rs  ffmpeg.rs  hash.rs  js.rs  mod.rs  sanitize.rs  window_options.rs
src/view/: home.rs  index.rs
