[package]
name = "unidown"
version = "0.1.0"
edition = "2024"
description = "解析下载各种资源"

[dependencies]
async-trait = "0.1.89"
bytes = "1.11.1"
chardetng = "0.1.17"
color-eyre = "0.6.5"
encoding_rs = "0.8.35"
fast-down = "3.6.3"
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
lazy_static = "1.5.0"
mimalloc = "0.1.48"
parking_lot = "0.12.5"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = [
  "brotli",
  "deflate",
  "gzip",
  "json",
  "query",
  "stream",
  "zstd"
] }
sanitize-filename = "0.6.0"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-forest = { version = "0.3.1", features = [
  "ansi",
  "serde",
  "smallvec",
  "tokio",
] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
codegen-units = 1
