[package]
name = "unidown"
version = "0.1.0"
edition = "2024"
description = "解析下载各种资源"
license = "MIT"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
bytes = "1.11.1"
chardetng = "0.1.17"
dirs = "6.0.0"
encoding_rs = "0.8.35"
fast-down = "3.6.4"
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
lazy_static = "1.5.0"
mimalloc = "0.1.48"
parking_lot = "0.12.5"
percent-encoding = "2.3.2"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = [
  "brotli",
  "cookies",
  "deflate",
  "gzip",
  "json",
  "query",
  "stream",
  "zstd"
] }
sanitize-filename = "0.6.0"
scopeguard = "1.2.0"
serde_json = "1.0.149"
sevenz-rust2 = "0.20.1"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_System_Console"
] }

[build-dependencies]
winresource = "0.1.30"

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
codegen-units = 1
